[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/UI/textFrame.png" type="Texture" id=1]
[ext_resource path="res://common/UI/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Screens/OptionButton/DifficultySettings/DifficultySettings.gd" type="Script" id=3]
[ext_resource path="res://common/enemy/enemy.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1240, 400 ), Vector2( 1280, 400 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show_stats"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../EnemyStatsLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/DifficultyButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1.2, 1.4 ), Vector2( 1, 1 ) ]
}

[node name="DifficultySettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
rect_pivot_offset = Vector2( 456.125, 349.727 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 1275.44, 400 )
rotation = -0.039784
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="EnemyStatsLabel" type="Label" parent="enemy"]
margin_left = 96.0
margin_top = -32.0
margin_right = 172.0
margin_bottom = 13.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 0, 22 )
text = "x2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/EnemyStatsLabel"]
anims/show_stats = SubResource( 2 )

[node name="MainRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -552.0
margin_top = -28.0
margin_right = 552.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 552, 84 )
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainRect/VBoxContainer"]
margin_right = 1072.0
margin_bottom = 45.0
text = "Difficulty"
align = 1

[node name="HSeparator" type="HSeparator" parent="MainRect/VBoxContainer"]
margin_top = 61.0
margin_right = 1072.0
margin_bottom = 65.0

[node name="DifficultyButton" type="OptionButton" parent="MainRect/VBoxContainer"]
margin_top = 81.0
margin_right = 1072.0
margin_bottom = 195.0
rect_pivot_offset = Vector2( 536, 57 )
text = "Easy"
align = 1
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainRect"]
anims/select = SubResource( 3 )
